[metadata]
name = blog
version = 0.0.1.dev0
url = https://github.com/bsolomon1124/flask-hello-world
license = MIT
maintainer = Brad Solomon
maintainer_email = bsolomon@protonmail.com
description = A blog app created with Flask.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Flask

[options]
packages = find:
package_dir =
    =src
include_package_data = true
python_requires = >=3.6
install_requires =
    Flask
    psycopg2

[options.extras_require]
test =
    pytest

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
